# latex-stats-uploader

./: Dockerfile  README.md  action.yml  entrypoint.sh  pyproject.toml
src/latexstats/: populate.py  stats.py  upload.py
